--- a/profile.html
+++ b/profile.html
@@ -101,5 +101,8 @@
       window.location.href = "index.html";
     });
   </script>
+  <script type="module" src="js/firebase-config.js"></script>
+<script type="module" src="js/auth-guard.js"></script>
 </body>
 </html>
+
