Fix HTML structure and add missing scripts

--- a/admin-products.html
+++ b/admin-products.html
@@ -143,5 +143,8 @@
     refreshBtn.addEventListener("click", loadPendingProducts);
     loadPendingProducts();
   </script>
+  <script type="module" src="js/firebase-config.js"></script>
+<script type="module" src="js/auth-guard.js"></script>
 </body>
 </html>
+
