Fix HTML structure and add Firebase script

--- a/store.html
+++ b/store.html
@@ -152,7 +152,9 @@
     await loadProducts();
     autoScrollCarousel();
   </script>
+  <script type="module" src="js/firebase-config.js"></script>
 </body>
 </html>
+
 
 
