--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Sign Up | Lizfar DZ</title>
 
+  <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
+
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap');
     body {
@@ -60,7 +62,7 @@
         <label class="block text-sm mb-1">Wilaya (Province)</label>
         <select id="wilaya" class="w-full px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-400">
           <option value="">Select your wilaya</option>
-          <option>01 - Adrar</option>
+        <option>01 - Adrar</option>
           <option>02 - Chlef</option>
           <option>03 - Laghouat</option>
           <option>04 - Oum El Bouaghi</option>
@@ -144,7 +146,7 @@
 
   <!-- Firebase -->
   <script type="module">
-    import { auth, db } from "./firebase-config.js";
+    import { auth, db } from "./js/firebase-config.js";
     import { createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
     import { setDoc, doc } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
 
@@ -165,16 +167,17 @@
       }
 
       try {
-        // ✉️ Create user with email + password
+        // 🟢 إنشاء المستخدم في Firebase Auth
         const userCredential = await createUserWithEmailAndPassword(auth, email, password);
         const user = userCredential.user;
 
-        // Save user data to Firestore
+        // 🟡 حفظ بيانات المستخدم في Firestore
         await setDoc(doc(db, "users", user.uid), {
           name,
           email,
           location,
           age,
+          role: "user",  // مستخدم عادي
           createdAt: new Date()
         });
 
@@ -183,51 +186,9 @@
 
       } catch (error) {
         alert("❌ Error: " + error.message);
+        console.error(error);
       }
     });
-  <script type="module" src="js/firebase-config.js"></script>
-  import { getAuth, createUserWithEmailAndPassword } 
-  from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
-
-import { db } from "./js/firebase-config.js";
-import { setDoc, doc } 
-  from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
-
-// عناصر الإدخال من النموذج
-const signupForm = document.getElementById("signupForm");
-
-signupForm.addEventListener("submit", async (e) => {
-  e.preventDefault();
-
-  const name = document.getElementById("name").value;
-  const email = document.getElementById("email").value;
-  const password = document.getElementById("password").value;
-
-  const auth = getAuth();
-
-  try {
-    // إنشاء المستخدم في Firebase Auth
-    const userCredential = await createUserWithEmailAndPassword(auth, email, password);
-    const user = userCredential.user;
-
-    // حفظ بيانات المستخدم في Firestore
-    await setDoc(doc(db, "users", user.uid), {
-      name: name,
-      email: email,
-      role: "user",  // 🟡 هنا نحدد دوره كمستخدم عادي
-      createdAt: new Date()
-    });
-
-    alert("تم إنشاء الحساب بنجاح 🎉");
-    window.location.href = "login.html";
-
-  } catch (error) {
-    alert("حدث خطأ أثناء التسجيل: " + error.message);
-  }
-});
   </script>
 </body>
 </html>
-
-
-
