--- a/login.html
+++ b/login.html
@@ -21,9 +21,7 @@
       border: 1px solid rgba(255,255,255,0.1);
       color: white;
     }
-    input::placeholder {
-      color: rgba(255,255,255,0.4);
-    }
+    input::placeholder { color: rgba(255,255,255,0.4); }
   </style>
 </head>
 
@@ -74,21 +72,30 @@
     © 2025 Lizfar DZ — كل الحقوق محفوظة
   </footer>
 
-  <!-- ✅ Firebase + Login Script -->
-  <script type="module" src="js/firebase-config.js"></script>
+  <!-- Firebase -->
   <script type="module">
-    import { auth } from "./js/firebase-config.js";
+    import { auth, db } from "./js/firebase-config.js";
     import {
       signInWithEmailAndPassword,
       onAuthStateChanged
     } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
+    import {
+      doc,
+      getDoc
+    } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
 
     const form = document.getElementById("loginForm");
 
-    // ✅ إذا المستخدم مسجل دخول مسبقًا → توجيهه مباشرة
-    onAuthStateChanged(auth, (user) => {
+    // ✅ إذا المستخدم مسجل دخول مسبقًا → إعادة توجيهه مباشرة حسب دوره
+    onAuthStateChanged(auth, async (user) => {
       if (user) {
-        window.location.href = "index.html";
+        const userRef = doc(db, "users", user.uid);
+        const userSnap = await getDoc(userRef);
+        if (userSnap.exists() && userSnap.data().role === "admin") {
+          window.location.href = "admin/dashboard.html";
+        } else {
+          window.location.href = "index.html";
+        }
       }
     });
 
@@ -108,12 +115,21 @@
         const userCredential = await signInWithEmailAndPassword(auth, email, password);
         const user = userCredential.user;
 
-        // 🔹 بعد تسجيل الدخول → التوجيه حسب الدور
-        const response = await fetch(`https://firestore.googleapis.com/v1/projects/lizfar-dz/databases/(default)/documents/users/${user.uid}`);
-        const data = await response.json();
-        const role = data.fields?.role?.stringValue || "user";
+        // 🔍 فحص بيانات المستخدم في Firestore
+        const userRef = doc(db, "users", user.uid);
+        const userSnap = await getDoc(userRef);
 
-        if (role === "admin") {
+        if (!userSnap.exists()) {
+          alert("❌ حسابك غير مسجل بشكل صحيح في النظام.");
+          return;
+        }
+
+        const userData = userSnap.data();
+
+        alert("✅ تم تسجيل الدخول بنجاح!");
+
+        // ✅ توجيه حسب الدور
+        if (userData.role === "admin") {
           window.location.href = "admin/dashboard.html";
         } else {
           window.location.href = "index.html";
@@ -128,7 +144,7 @@
         } else if (error.code === "auth/invalid-email") {
           alert("⚠️ البريد الإلكتروني غير صالح.");
         } else {
-          alert("❌ حدث خطأ أثناء تسجيل الدخول.");
+          alert("❌ حدث خطأ أثناء تسجيل الدخول: " + error.message);
         }
       }
     });
