--- a/login.html
+++ b/login.html
@@ -88,16 +88,10 @@
 
     // ✅ إذا المستخدم مسجل دخول مسبقًا → إعادة توجيهه مباشرة حسب دوره
     onAuthStateChanged(auth, async (user) => {
-      if (user) {
-        const userRef = doc(db, "users", user.uid);
-        const userSnap = await getDoc(userRef);
-        if (userSnap.exists() && userSnap.data().role === "admin") {
-          window.location.href = "admin/dashboard.html";
-        } else {
-          window.location.href = "index.html";
-        }
-      }
-    });
+  // لا تعمل أي إعادة توجيه تلقائية هنا
+  // فقط نخزن حالة المستخدم في console للتأكد
+  console.log("🟢 حالة المستخدم:", user ? user.email : "غير مسجل");
+});
 
     // ✅ عند تسجيل الدخول
     form.addEventListener("submit", async (e) => {
@@ -151,3 +145,4 @@
   </script>
 </body>
 </html>
+
