--- a/index.html
+++ b/index.html
@@ -48,9 +48,15 @@
             <svg class="chev w-4 h-4 text-gray-300" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 9l6 6 6-6"/></svg>
           </button>
           <div class="pc-submenu mt-2 mr-2 ml-2 hidden space-y-1 text-sm">
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">تجميعات</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">كروت شاشة</button>
-            <button class="w-full text-right px-3 py-2 rounded-md side-item">معالجات</button>
+            <!-- English sub-items -->
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Builds</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Graphics Cards</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">CPUs</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">RAM</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Motherboards</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Cooling Fans</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Storage (SSD/HDD)</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Power Supplies</button>
           </div>
         </div>
 
@@ -61,8 +67,13 @@
             <svg class="chev w-4 h-4 text-gray-300" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 9l6 6 6-6"/></svg>
           </button>
           <div class="laptop-submenu mt-2 mr-2 ml-2 hidden space-y-1 text-sm">
+            <!-- English sub-items -->
             <button class="w-full text-right px-3 py-2 rounded-md side-item">HP</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Dell</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Lenovo</button>
             <button class="w-full text-right px-3 py-2 rounded-md side-item">Asus</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">MSI</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Apple</button>
           </div>
         </div>
 
@@ -73,12 +84,59 @@
             <svg class="chev w-4 h-4 text-gray-300" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 9l6 6 6-6"/></svg>
           </button>
           <div class="phone-submenu mt-2 mr-2 ml-2 hidden space-y-1 text-sm">
+            <!-- English sub-items -->
             <button class="w-full text-right px-3 py-2 rounded-md side-item">Samsung</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Xiaomi</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Huawei</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Oppo</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Infinix</button>
             <button class="w-full text-right px-3 py-2 rounded-md side-item">iPhone</button>
           </div>
         </div>
 
-        <button class="w-full text-right side-item px-3 py-2 rounded-md text-sm font-medium">شاشات</button>
+        <!-- Consoles -->
+        <div>
+          <button class="w-full text-right side-item px-3 py-2 rounded-md flex items-center justify-between text-sm font-medium console-toggle">
+            <span>Consoles</span>
+            <svg class="chev w-4 h-4 text-gray-300" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 9l6 6 6-6"/></svg>
+          </button>
+          <div class="console-submenu mt-2 mr-2 ml-2 hidden space-y-1 text-sm">
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">PlayStation</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Xbox</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Nintendo</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Handhelds</button>
+          </div>
+        </div>
+
+        <!-- Accessories -->
+        <div>
+          <button class="w-full text-right side-item px-3 py-2 rounded-md flex items-center justify-between text-sm font-medium acc-toggle">
+            <span>Accessories</span>
+            <svg class="chev w-4 h-4 text-gray-300" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 9l6 6 6-6"/></svg>
+          </button>
+          <div class="acc-submenu mt-2 mr-2 ml-2 hidden space-y-1 text-sm">
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Mouse</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Keyboard</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Headphones</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">PC Accessories</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Phone Accessories</button>
+          </div>
+        </div>
+
+        <!-- Screens -->
+        <div>
+          <button class="w-full text-right side-item px-3 py-2 rounded-md flex items-center justify-between text-sm font-medium screens-toggle">
+            <span>شاشات</span>
+            <svg class="chev w-4 h-4 text-gray-300" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 9l6 6 6-6"/></svg>
+          </button>
+          <div class="screens-submenu mt-2 mr-2 ml-2 hidden space-y-1 text-sm">
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Gaming</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">4K</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Curved</button>
+            <button class="w-full text-right px-3 py-2 rounded-md side-item">Office</button>
+          </div>
+        </div>
+
       </nav>
     </aside>
 
@@ -183,6 +241,9 @@
         {btn: '.pc-toggle', menu: '.pc-submenu'},
         {btn: '.laptop-toggle', menu: '.laptop-submenu'},
         {btn: '.phone-toggle', menu: '.phone-submenu'},
+        {btn: '.console-toggle', menu: '.console-submenu'},
+        {btn: '.acc-toggle', menu: '.acc-submenu'},
+        {btn: '.screens-toggle', menu: '.screens-submenu'},
       ];
 
       toggles.forEach(t => {
@@ -196,6 +257,11 @@
           });
         }
       });
+
+      // User menu
+      const userBtn = document.getElementById("userBtn");
+      const dropdown = document.getElementById("userDropdown");
+      userBtn.addEventListener("click", () => dropdown.classList.toggle("hidden"));
     });
   </script>
 </body>
